--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">FileDownloader</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="download_file">Download File</string>
+    <string name="title_activity_downloader">Downloader</string>
 
 </resources>
